--- a/index.html
+++ b/index.html
@@ -10,15 +10,19 @@
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
       crossorigin="anonymous"
     />
+    <style>
+      .section-card {
+      }
+    </style>
   </head>
   <body>
-    <nav class="navbar navbar-expand bg-secondary-subtle">
+    <nav class="navbar navbar-expand bg-primary">
       <div class="container">
         <ul class="navbar-nav d-flex align-items-center">
           <li class="nav-item pe-4">
             <button class="btn btn-sm btn-secondary btn-block">Logo</button>
           </li>
-          <li class="nav-item bg-primary-subtle h-100">
+          <li class="nav-item">
             <a class="nav-link active px-4" aria-current="page" href="#"
               >Start</a
             >
