--- a/index.html
+++ b/index.html
@@ -40,5 +40,6 @@
         <button class="btn btn-secondary bg-dark ml-auto px-4">Cart (1)</button>
       </div>
     </nav>
+    <div class="container"></div>
   </body>
 </html>
