--- a/index2.html
+++ b/index2.html
@@ -15,14 +15,24 @@
         width: 100%;
         border: none;
       }
+      .navbar-toggler {
+        display: flex;
+        align-items: center;
+        margin: 10px 0px 10px 10px;
+        @media screen and (min-width: 992px) {
+        }
+      }
+      .navbar-hidden {
+        padding: 10px;
+      }
       .colorful-area {
-        background: #c9d2de; /* Kolor tła */
+        background: #c9d2de;
         min-width: 25%;
       }
       .section {
-        padding-top: 30px; /* Odstęp na górze sekcji */
-        padding-bottom: 30px; /* Odstęp na dole sekcji */
-        min-height: 300px; /* Minimalna wysokość sekcji */
+        padding-top: 30px;
+        padding-bottom: 30px;
+        min-height: 300px;
       }
 
       .footer {
@@ -41,39 +51,59 @@
         background: #c9d2de;
       }
       .nav-items {
-        flex-direction: column; /* Ustaw kierunek na kolumnę */
-        align-items: center; /* Wyśrodkuj elementy w pionie */
+        flex-direction: column;
+        align-items: center;
         text-align: center;
         justify-content: center;
+        padding: 40px 0px 40px 0px;
         @media screen and (min-width: 992px) {
           justify-content: space-between;
           display: flex;
           flex-direction: row;
           height: 50px;
+          padding: 0;
         }
       }
-      @media screen and (min-width: 992px) {
-        .nav-list {
+
+      .nav-list {
+        @media screen and (min-width: 992px) {
           width: 45%;
-          justify-content: space-between;
           height: 100%;
         }
-
-        .nav-list li:nth-child(2) {
+      }
+      .nav-list li:nth-child(2) {
           background: #e5e8f1;
         }
-      }
       .nav-logo--button {
         width: 100px;
         height: 30px;
         background: #848fa2;
+        margin-bottom: 8px;
+        @media screen and (min-width: 992px) {
+          margin-bottom: 0px;
+        }
       }
       .nav-cart--button {
         width: 100px;
         background: #49525d;
+        margin-top: 8px;
+        @media screen and (min-width: 992px) {
+          margin-top: 0px;
+        }
       }
       .navbar-menu--collapsed {
         height: 50px;
+      }
+      .nav-item {
+        display: flex;
+        align-items: center;
+        height: 100%;
+        flex-grow: 1;
+      }
+      .nav-link {
+        flex-grow: 1;
+        justify-content: center;
+        text-align: center;
       }
     </style>
   </head>
@@ -91,34 +121,34 @@
       >
         <span class="navbar-toggler-icon"></span>
       </button>
-
-      <!-- Zawartość głównego menu nawigacyjnego -->
       <div class="collapse navbar-collapse" id="navbarNav">
-        <div class="container nav-items">
-          <ul class="navbar-nav nav-list d-flex align-items-center gx-3">
-            <li class="nav-item">
-              <button
-                class="btn btn-sm btn-secondary btn-block nav-logo--button"
-              >
-                Logo
-              </button>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Start</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
-            </li>
-          </ul>
-          <button class="btn btn-secondary nav-cart--button ml-auto">
-            Cart (1)
-          </button>
+        <div class="container">
+          <div class="container nav-items">
+            <ul class="navbar-nav nav-list d-flex align-items-center gx-3">
+              <li class="nav-item">
+                <button
+                  class="btn btn-sm btn-secondary btn-block nav-logo--button"
+                >
+                  Logo
+                </button>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Start</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Features</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Pricing</a>
+              </li>
+            </ul>
+            <button class="btn btn-secondary nav-cart--button ml-auto">
+              Cart (1)
+            </button>
+          </div>
         </div>
       </div>
     </nav>
@@ -182,25 +212,27 @@
       </div>
     </section>
     <section class="footer">
-      <div class="footer-colorful--area"></div>
-      <div class="d-flex flex-wrap">
-        <div>
-          <ul class="list-unstyled text-white">
-            <li>Słowo 1</li>
-            <li>Słowo 2</li>
-            <li>Słowo 3</li>
-            <li>Słowo 4</li>
-            <li>Słowo 5</li>
-          </ul>
-        </div>
-        <div>
-          <ul class="list-unstyled text-white">
-            <li>Słowo 6</li>
-            <li>Słowo 7</li>
-            <li>Słowo 8</li>
-            <li>Słowo 9</li>
-            <li>Słowo 10</li>
-          </ul>
+      <div class="container">
+        <div class="footer-colorful--area"></div>
+        <div class="d-flex flex-wrap">
+          <div>
+            <ul class="list-unstyled text-white">
+              <li>Słowo 1</li>
+              <li>Słowo 2</li>
+              <li>Słowo 3</li>
+              <li>Słowo 4</li>
+              <li>Słowo 5</li>
+            </ul>
+          </div>
+          <div>
+            <ul class="list-unstyled text-white">
+              <li>Słowo 6</li>
+              <li>Słowo 7</li>
+              <li>Słowo 8</li>
+              <li>Słowo 9</li>
+              <li>Słowo 10</li>
+            </ul>
+          </div>
         </div>
       </div>
     </section>
