--- a/index2.html
+++ b/index2.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
     <style>
-      .section-card {
+      .main-card {
         width: 100%;
         border: none;
       }
@@ -29,18 +29,22 @@
         background: #c9d2de;
         min-width: 25%;
       }
-      .section {
+      .main {
         padding-top: 30px;
         padding-bottom: 30px;
-        min-height: 300px;
       }
-
-      .footer {
-        background: #49525d;
-        max-height: 250px;
+      body {
+        min-height: 100vh;
         display: flex;
-        align-items: center; /* Wyśrodkowanie wertykalne */
+        flex-direction: column;
+      }
+      .footer {
+        flex: 1; /* Elastyczne dopasowanie stopki do dolnej części strony */
+        display: flex;
+        align-items: center;
+        justify-content: center;
         background: #49525d;
+        flex-direction: column;
       }
       .footer-colorful--area {
         background: #c9d2de;
@@ -95,6 +99,11 @@
           margin-top: 0px;
         }
       }
+      body {
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+      }
       .navbar-menu--collapsed {
         height: 50px;
       }
@@ -117,26 +126,98 @@
         min-width: 140px;
         background: white;
         color: black;
-     
       }
       .form-fieldset {
-        height: 40px;
+        display: flex;
+        flex-direction: column;
         gap: 10px;
+        width: 100%;
+        @media screen and (min-width: 992px) {
+          flex-direction: row;
+          height: 40px;
+          width: auto;
+        }
       }
       .form-inline {
         display: flex;
         align-items: center;
+        width: 100%;
       }
       .footer-media {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        width: 40%;
+        @media screen and (min-width: 992px) {
+          width: auto;
+        }
       }
       svg {
         width: 18px;
         fill: white;
+        transition: fill 0.3s ease;
+        &:hover {
+          cursor: pointer;
+          fill: #c9d2de;
+        }
       }
       .footer-icons--list {
-        width: 50%;
+        width: 100%;
         display: flex;
         justify-content: space-between;
+        @media screen and (min-width: 992px) {
+          width: 50%;
+        }
+      }
+      .footer-list {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        width: 100%;
+        @media screen and (min-width: 992px) {
+          width: 45%;
+        }
+      }
+      .footer-link{
+        text-decoration: none;
+        color:white;
+        transition: fill 0.3s ease;
+        &:hover {
+          cursor: pointer;
+          color: #c9d2de;
+        }
+      }
+      .footer-wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 40px 0 40px 0;
+        gap: 40px;
+        @media screen and (min-width: 992px) {
+          flex-direction: row;
+          padding: 0;
+        }
+      }
+      .footer-wrapper > :first-child {
+        @media screen and (min-width: 992px) {
+          align-self: flex-start;
+        }
+      }
+      .footer-wrapper--secondary {
+        display: flex;
+        justify-content: space-between;
+        width: 40%;
+      }
+
+      .form-group {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        @media screen and (min-width: 992px) {
+          flex-direction: baseline;
+          align-items: flex-start;
+        }
       }
     </style>
   </head>
@@ -185,13 +266,13 @@
         </div>
       </div>
     </nav>
-    <section class="section container d-flex justify-content-between">
+    <main class="main container d-flex justify-content-between">
       <div class="colorful-area rounded d-none d-lg-block"></div>
       <div class="card-wrapper">
         <h1 class="pb-3">Title 1</h1>
         <ul class="row list-unstyled justify-content-center">
           <li class="col-lg-4 col-md-6 col-sm-12">
-            <div class="card section-card mb-4">
+            <div class="card main-card mb-4">
               <img
                 src="https://placehold.co/600x400"
                 class="card-img-top"
@@ -208,7 +289,7 @@
             </div>
           </li>
           <li class="col-lg-4 col-md-6 col-sm-12">
-            <div class="card section-card mb-4">
+            <div class="card main-card mb-4">
               <img
                 src="https://placehold.co/600x400"
                 class="card-img-top"
@@ -225,7 +306,7 @@
             </div>
           </li>
           <li class="col-lg-4 col-md-6 col-sm-12">
-            <div class="card section-card mb-4">
+            <div class="card main-card mb-4">
               <img
                 src="https://placehold.co/600x400"
                 class="card-img-top"
@@ -243,28 +324,40 @@
           </li>
         </ul>
       </div>
-    </section>
-    <section class="footer">
-      <div class="container d-flex">
-        <div class="footer-colorful--area rounded"></div>
-        <div class="d-flex flex-wrap">
-          <div class="">
-            <ul class="list-unstyled text-white">
-              <li>Słowo 1</li>
-              <li>Słowo 2</li>
-              <li>Słowo 3</li>
-              <li>Słowo 4</li>
-              <li>Słowo 5</li>
-            </ul>
-          </div>
-          <div>
-            <ul class="list-unstyled text-white">
-              <li>Słowo 6</li>
-              <li>Słowo 7</li>
-              <li>Słowo 8</li>
-              <li>Słowo 9</li>
-              <li>Słowo 10</li>
-            </ul>
+    </main>
+    <footer class="footer">
+      <div class="footer-wrapper container d-flex justify-content-between">
+        <div class="footer-wrapper--secondary">
+          <div class="footer-colorful--area d-none d-lg-block rounded"></div>
+          <div class="footer-list">
+            <div>
+              <ul class="list-unstyled text-white">
+                <li class="mb-2"><a class="footer-link" href="#">Home</a></li>
+                <li class="mb-2"><a class="footer-link" href="#">About</a></li>
+                <li class="mb-2">
+                  <a class="footer-link" href="#">Features</a>
+                </li>
+                <li class="mb-2">
+                  <a class="footer-link" href="#">Pricing</a>
+                </li>
+                <li class="mb-2">
+                  <a class="footer-link" href="#">Contact us</a>
+                </li>
+              </ul>
+            </div>
+            <div>
+              <ul class="list-unstyled text-white">
+                <li class="mb-2"><a class="footer-link" href="#">Blog</a></li>
+                <li class="mb-2"><a class="footer-link" href="#">Search</a></li>
+                <li class="mb-2"><a class="footer-link" href="#">T & Cs</a></li>
+                <li class="mb-2">
+                  <a class="footer-link" href="#">Privacy</a>
+                </li>
+                <li class="mb-2">
+                  <a class="footer-link" href="#">Community</a>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
         <div class="footer-media">
@@ -275,10 +368,10 @@
               >
               <div class="form-fieldset d-flex">
                 <input
-                  type="password"
+                  type="EMAIL"
                   class="form-control"
                   id="inputEmail"
-                  placeholder="Password"
+                  placeholder="Enter your email"
                 />
 
                 <button type="submit" class="btn btn-secondary footer-button">
@@ -353,7 +446,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
