--- a/index3.html
+++ b/index3.html
@@ -39,7 +39,7 @@
         flex-direction: column;
       }
       .footer {
-        flex: 1; /* Elastyczne dopasowanie stopki do dolnej części strony */
+        flex: 1;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -113,7 +113,7 @@
         height: 100%;
         flex-grow: 1;
       }
-      
+
       .nav-link {
         flex-grow: 1;
         justify-content: center;
@@ -210,7 +210,8 @@
         justify-content: space-between;
         width: 40%;
         @media screen and (max-width: 280px) {
-        width: 70%}
+          width: 70%;
+        }
       }
 
       .form-group {
@@ -227,7 +228,6 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-color p-0">
-      <!-- Dodaj przycisk do zmiany menu na mobilnych urządzeniach -->
       <button
         class="navbar-toggler"
         type="button"
