--- a/index.html
+++ b/index.html
@@ -127,6 +127,10 @@
         background: #c9d2de;
         width: 140px;
         height: 30px;
+        @media screen and (min-width: 992px) {
+          position: relative;
+          top: 0.7rem;
+        }
       }
       .footer-media {
         display: flex;
@@ -149,7 +153,13 @@
           width: 45%;
         }
       }
-
+      .footer-list--column {
+        @media screen and (min-width: 992px) {
+          position: relative;
+          top: 0.5rem;
+          margin-bottom: 0;
+        }
+      }
       .footer-link {
         text-decoration: none;
         color: white;
@@ -318,7 +328,7 @@
           <div class="footer-colorful--area d-none d-lg-block rounded"></div>
           <div class="footer-list">
             <div>
-              <ul class="list-unstyled text-white">
+              <ul class="footer-list--column list-unstyled text-white">
                 <li class="mb-2"><a class="footer-link" href="#">Home</a></li>
                 <li class="mb-2"><a class="footer-link" href="#">About</a></li>
                 <li class="mb-2">
@@ -333,7 +343,7 @@
               </ul>
             </div>
             <div>
-              <ul class="list-unstyled text-white">
+              <ul class="footer-list--column list-unstyled text-white">
                 <li class="mb-2"><a class="footer-link" href="#">Blog</a></li>
                 <li class="mb-2"><a class="footer-link" href="#">Search</a></li>
                 <li class="mb-2"><a class="footer-link" href="#">T & Cs</a></li>
